gcc/testsuite/rust/rustc/ui/consts/const-extern-fn/issue-68062-const-extern-fns-dont-need-fn-specifier-2.rs
fn main() {}

#[cfg(FALSE)]
fn container() {
    const unsafe WhereIsFerris Now() {}
// { dg-error "" "" { target *-*-* } .-1 }
}

